--- a/src/Demo_Caro/CaroServer.form
+++ b/src/Demo_Caro/CaroServer.form
@@ -58,7 +58,7 @@
               <Component id="boardPanel" min="-2" pref="554" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="ScrollPaneChat" alignment="0" max="32767" attributes="0"/>
+                  <Component id="ScrollPaneChat" alignment="0" pref="0" max="32767" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="messageTextField" min="-2" pref="245" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -151,20 +151,15 @@
           </Layout>
           <SubComponents>
             <Component class="javax.swing.JLabel" name="jLabel1">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="jLabel1"/>
-              </Properties>
             </Component>
           </SubComponents>
         </Container>
       </SubComponents>
     </Container>
     <Component class="javax.swing.JTextField" name="messageTextField">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Enter your Messages"/>
-      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="messageTextFieldActionPerformed"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="messageTextFieldKeyPressed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="sendButton">
