--- a/src/Demo_Caro/CaroServer.form
+++ b/src/Demo_Caro/CaroServer.form
@@ -219,10 +219,13 @@
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="replayButonMouseClicked"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="stopButton">
+        <Component class="javax.swing.JToggleButton" name="stopButton">
           <Properties>
             <Property name="text" type="java.lang.String" value="Stop"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="stopButtonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
