--- a/src/Demo_Caro/Login.form
+++ b/src/Demo_Caro/Login.form
@@ -51,9 +51,9 @@
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="userNameTxt" max="32767" attributes="0"/>
-                      <Component id="serverList" alignment="0" pref="199" max="32767" attributes="0"/>
+                      <Component id="userNameTxt" pref="199" max="32767" attributes="0"/>
                       <Component id="passwordTxt" alignment="0" max="32767" attributes="0"/>
+                      <Component id="serverIPTxt" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -74,9 +74,9 @@
                   <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="serverLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="serverList" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="serverIPTxt" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="0" pref="10" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="13" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -101,16 +101,9 @@
             <Property name="text" type="java.lang.String" value="Server :"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JComboBox" name="serverList">
+        <Component class="javax.swing.JTextField" name="serverIPTxt">
           <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="Item 1"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
-              </StringArray>
-            </Property>
+            <Property name="text" type="java.lang.String" value="Adminpc"/>
           </Properties>
         </Component>
       </SubComponents>
